feat: Modern Java In Action
- 4장 수정
- 5장 추가

--- a/Modern Java In Action/4. 스트림 소개/2. 스트림 시작하기.md
+++ b/Modern Java In Action/4. 스트림 소개/2. 스트림 시작하기.md
@@ -32,9 +32,9 @@
                         .collect(toList()); // 결과를 다른 리스트로 저장 List<String>
     ```
 
-    - 우선 요리 리스트인 menu에 `stream` 메서드를 호출해서 스트림을 얻었다. 여기서 **데이터 소스**는 ****요리 리스트다.
+    - 우선 요리 리스트인 menu에 `stream` 메서드를 호출해서 스트림을 얻었다. 여기서 **데이터 소스**는 요리 리스트다.
     - 데이터 소스는 **연속된 요소**를 스트림에 제공한다.
     - 다음으로 스트림에 `filter`, `map`, `limit`, `collect`로 이어지는 일련의 **데이터 처리 연산**을 적용한다.
     - `collect`를 제외한 모든 연산은 서로 파이프라인을 형성할 수 있도록 스트림을 반환한다. 파이프라인은 소스에 적용하는 SQL 질의같은 느낌의 존재다.
-    - 마지막으로 `collect` 연산으로 파이프라인을 처리해서 결과를 반환한다.(`collect`는 stream이 아닌 List를 반환)
+    - 마지막으로 `collect` 연산으로 파이프라인을 처리해서 결과를 반환한다.(`collect`는 `stream`이 아닌 `List`를 반환)
     - 마지막에 `collect`를 호출하기 전까지 `menu`에서 무엇도 선택되지 않으며 출력 결과도 존재하지 않는다. 즉 `collect`가 호출되기 전까지 메서드 호출이 저장되는 효과가 있다.
